--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -26,8 +26,8 @@ flag EDE
   description:              Build EDE module.
 
 flag EDEUsePrettyprinter
-  description:              Build EDE module migrated from
-                            [ansi-wl-pprint](https://hackage.haskell.org/package/ansi-wl-pprint)
+  description:              Build EDE module migrated
+                            from [ansi-wl-pprint](https://hackage.haskell.org/package/ansi-wl-pprint)
                             to [prettyprinter](https://hackage.haskell.org/package/prettyprinter).
 
 library
