improved test for ServiceHookAdaptor [ci skip]

--- a/test/ServiceHookAdaptor/nginx.conf
+++ b/test/ServiceHookAdaptor/nginx.conf
@@ -35,7 +35,13 @@ http {
         location / {
             haskell_run testSecretWord $hs_secret_word $arg_s;
 
-            if ($hs_secret_word) {
+            if ($hs_secret_word = null) {
+                echo_status 504;
+                echo "Try later! The service is not ready!";
+                break;
+            }
+
+            if ($hs_secret_word = set) {
                 echo_status 200;
                 echo "Congrats! You know the secret word!";
                 break;
