added docs for module NgxExport.Tools.ServiceHookAdaptor

--- a/test/ServiceHookAdaptor/nginx.conf
+++ b/test/ServiceHookAdaptor/nginx.conf
@@ -17,26 +17,19 @@ http {
 
     haskell load /var/lib/nginx/test_tools_extra_servicehookadaptor.so;
 
-    haskell_service_hooks_zone hooks 32k;
+    haskell_run_service simpleService_hookAdaptor $hs_hook_adaptor '';
 
-    haskell_run_service simpleService_hookAdaptor $hs_watch_secret_word '';
+    haskell_service_hooks_zone hooks 32k;
 
     server {
         listen       8010;
         server_name  main;
 
-        location /change_sw {
-            allow 127.0.0.1;
-            deny all;
-
-            haskell_service_hook changeSecretWord $hs_watch_secret_word $arg_s;
-        }
-
         location / {
             haskell_run testSecretWord $hs_secret_word $arg_s;
 
             if ($hs_secret_word = null) {
-                echo_status 504;
+                echo_status 503;
                 echo "Try later! The service is not ready!";
                 break;
             }
@@ -49,6 +42,13 @@ http {
 
             echo_status 404;
             echo "Hmm, you do not know a secret!";
+        }
+
+        location /change_sw {
+            allow 127.0.0.1;
+            deny all;
+
+            haskell_service_hook changeSecretWord $hs_hook_adaptor $arg_s;
         }
     }
 }
