--- a/test/ServiceHookAdaptor/nginx.conf
+++ b/test/ServiceHookAdaptor/nginx.conf
@@ -50,6 +50,13 @@ http {
 
             haskell_service_hook changeSecretWord $hs_hook_adaptor $arg_s;
         }
+
+        location /reset_sw {
+            allow 127.0.0.1;
+            deny all;
+
+            haskell_service_hook resetSecretWord $hs_hook_adaptor;
+        }
     }
 }
 
