using default_type application/json in JSON outputs in examples

--- a/test/Prometheus/nginx.conf
+++ b/test/Prometheus/nginx.conf
@@ -201,10 +201,12 @@ http {
         }
 
         location /counters {
+            default_type application/json;
             echo $cnt_collection;
         }
 
         location /histograms {
+            default_type application/json;
             echo $cnt_histograms;
         }
 
