--- a/test/Prometheus/nginx_anno.conf
+++ b/test/Prometheus/nginx_anno.conf
@@ -197,10 +197,12 @@ http {
         }
 
         location /counters {
+            default_type application/json;
             echo $cnt_collection;
         }
 
         location /histograms {
+            default_type application/json;
             echo $cnt_histograms;
         }
 
