compileRegexes was split into declareRegexes and compileRegexes

--- a/test/PCRE/nginx.conf
+++ b/test/PCRE/nginx.conf
@@ -13,10 +13,12 @@ http {
 
     haskell load /var/lib/nginx/test_tools_extra_pcre.so;
 
-    haskell_run_service simpleService_compileRegexes $hs_regexes
+    haskell_run_service simpleService_declareRegexes $hs_regexes
             '[("userArea", "(?:\\\\|)(\\\\d+)$", "")
              ,("keyValue", "(k\\\\w+)(\\\\|)(v\\\\w+)", "i")
              ]';
+
+    haskell_service_update_hook compileRegexes $hs_regexes;
 
     haskell_run_service simpleService_mapSubs $hs_subs
             '[("erase", "")]';
