--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -30,6 +30,11 @@ flag EDEUsePrettyprinter
                             from [ansi-wl-pprint](https://hackage.haskell.org/package/ansi-wl-pprint)
                             to [prettyprinter](https://hackage.haskell.org/package/prettyprinter).
 
+flag PCRE
+  description:              Build PCRE module, requires patched pcre-light.
+  default:                  False
+  manual:                   True
+
 library
   default-language:         Haskell2010
   build-depends:            base >= 4.8 && < 5
@@ -67,6 +72,10 @@ library
                           , ansi-wl-pprint >= 0.6.3
                           , trifecta <= 2
 
+  if flag(PCRE)
+    build-depends:          pcre-light >= 0.4
+                          , pcre-heavy
+
   exposed-modules:          NgxExport.Tools.Prometheus
                           , NgxExport.Tools.Subrequest
                           , NgxExport.Tools.ServiceHookAdaptor
@@ -76,6 +85,9 @@ library
 
   if flag(EDE)
     exposed-modules:        NgxExport.Tools.EDE
+
+  if flag(PCRE)
+    exposed-modules:        NgxExport.Tools.PCRE
 
   ghc-options:             -Wall
 
