added bridged HTTP subrequests

--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -15,6 +15,10 @@ http {
         server 127.0.0.1:8020;
     }
 
+    upstream sink {
+        server 127.0.0.1:8030;
+    }
+
     haskell load /var/lib/nginx/test_tools_extra_subrequest.so;
 
     haskell_run_service simpleService_makeRequest $hs_service_httpbin
@@ -40,7 +44,7 @@ http {
 # the same configuration for using with makeSubrequestWithRead
 #
 #                    'SubrequestConf { srMethod = ""
-#                                    , srUri = "http://127.0.0.1:8020/proxy"
+#                                    , srUri = "http://127.0.0.1:8010/proxy"
 #                                    , srBody = ""
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
@@ -67,7 +71,7 @@ http {
 # the same configuration for using with makeSubrequestWithRead
 #
 #                    'SubrequestConf { srMethod = ""
-#                                    , srUri = "http://internal/"
+#                                    , srUri = "http://backend_proxy/"
 #                                    , srBody = ""
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
@@ -160,10 +164,53 @@ http {
             echo -n "Subrequest body: $hs_subrequest_body";
         }
 
-        location /proxy {
+        location /bridge {
+            haskell_run_async makeBridgedSubrequestFull $hs_subrequest
+                    '{"source":
+                        {"uri": "http://127.0.0.1:$arg_p/proxy/bridge"
+                        ,"headers": [["Custom-Header", "$arg_a"]]
+                        }
+                     ,"sink":
+                        {"uri": "http://backend_proxy/sink/echo"
+                        ,"useUDS": true
+                        }
+                     }';
+
+# the same configuration for using with makeBridgedSubrequestWithRead
+#
+#                    'BridgeConf { bridgeSource = SubrequestConf
+#                                    { srMethod = ""
+#                                    , srUri =
+#                                          "http://127.0.0.1:$arg_p/proxy/bridge"
+#                                    , srBody = ""
+#                                    , srHeaders = [("Custom-Header", "$arg_a")]
+#                                    , srResponseTimeout =
+#                                          ResponseTimeout (Sec 30)
+#                                    , srUseUDS = False
+#                                    }
+#                                , bridgeSink = SubrequestConf
+#                                    { srMethod = ""
+#                                    , srUri = "http://backend_proxy/sink/echo"
+#                                    , srBody = ""
+#                                    , srHeaders = []
+#                                    , srResponseTimeout =
+#                                          ResponseTimeout (Sec 30)
+#                                    , srUseUDS = True
+#                                    }
+#                                }';
+
+            if ($arg_exc = yes) {
+                haskell_content fromFullResponseWithException $hs_subrequest;
+                break;
+            }
+
+            haskell_content fromFullResponse $hs_subrequest;
+        }
+
+        location ~ ^/proxy(.*) {
             allow 127.0.0.1;
             deny all;
-            proxy_pass http://backend;
+            proxy_pass http://backend$1;
         }
 
         location /httpbin {
@@ -178,6 +225,10 @@ http {
         location / {
             proxy_pass http://backend;
         }
+
+        location ~ ^/sink(.*) {
+            proxy_pass http://sink$1;
+        }
     }
 
     server {
@@ -188,6 +239,26 @@ http {
             set $custom_header $http_custom_header;
             add_header Subrequest-Header "This is response from subrequest";
             echo "In backend, Custom-Header is '$custom_header'";
+        }
+
+        location /bridge {
+            set $custom_header $http_custom_header;
+            add_header Subrequest-Header "This is response from subrequest";
+            echo "The response may come in chunks!";
+            echo "In backend, Custom-Header is '$custom_header'";
+        }
+    }
+
+    server {
+        listen       8030;
+        server_name  sink;
+
+        location / {
+            haskell_run_async_on_request_body reqBody $hs_rb noarg;
+            add_header Bridge-Header
+                    "This response was bridged from subrequest";
+            echo "Here is the bridged response:";
+            echo -n $hs_rb;
         }
     }
 }
