--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -52,6 +52,7 @@ library
                           , array
                           , text
                           , safe
+                          , hashable <= 1.3.2.0
 
   if flag(Aggregate)
     build-depends:          snap-core
