--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -171,7 +171,7 @@ http {
                         ,"headers": [["Custom-Header", "$arg_a"]]
                         }
                      ,"sink":
-                        {"uri": "http://backend_proxy/sink/echo"
+                        {"uri": "http://sink_proxy/echo"
                         ,"useUDS": true
                         }
                      }';
@@ -190,7 +190,7 @@ http {
 #                                    }
 #                                , bridgeSink = SubrequestConf
 #                                    { srMethod = ""
-#                                    , srUri = "http://backend_proxy/sink/echo"
+#                                    , srUri = "http://sink_proxy/echo"
 #                                    , srBody = ""
 #                                    , srHeaders = []
 #                                    , srResponseTimeout =
@@ -225,10 +225,6 @@ http {
         location / {
             proxy_pass http://backend;
         }
-
-        location ~ ^/sink(.*) {
-            proxy_pass http://sink$1;
-        }
     }
 
     server {
@@ -250,10 +246,19 @@ http {
     }
 
     server {
+        listen       unix:/tmp/backend.sock;
+        server_name  sink_proxy;
+
+        location / {
+            proxy_pass http://sink;
+        }
+    }
+
+    server {
         listen       8030;
         server_name  sink;
 
-        location / {
+        location /echo {
             haskell_run_async_on_request_body reqBody $hs_rb noarg;
             add_header Bridge-Header
                     "This response was bridged from subrequest";
