--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,12 @@ jobs:
         cabal: [3.2]
         experimental: [false]
         include:
+          - ghc: 9.2.1
+            cabal: 3.6.2.0
+            experimental: true
           - ghc: 9.0.1
             cabal: 3.4.0.0
-            experimental: true
+            experimental: false
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -27,12 +30,18 @@ jobs:
       - name: Install
         env:
           GHCVER: ${{ matrix.ghc }}
+          CABALVER: ${{ matrix.cabal }}
         run: |
           set -e
           cabal --version
           echo "$(ghc --version) "`
               `"[$(ghc --print-project-git-commit-id 2>/dev/null || echo '?')]"
-          cabal v1-update
+          if echo "$CABALVER" | grep -q '^3\.6'
+          then
+              cabal v2-update
+          else
+              cabal v1-update
+          fi
           cabal v1-install --only-dependencies
           cabal v1-configure
           cabal v1-build
