--- a/test/Aggregate/nginx_nosnap.conf
+++ b/test/Aggregate/nginx_nosnap.conf
@@ -15,6 +15,8 @@ http {
 
     haskell_run_service simpleService_reportStats $hs_reportStats 8100;
 
+    haskell_var_empty_on_error $hs_stats;
+
     server {
         listen       8010;
         server_name  main;
