--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -45,7 +45,7 @@ library
                           , http-types >= 0.7.0
                           , http-client >= 0.5.3
                           , network >= 2.4.0.0
-                          , time >= 1.9.1
+                          , time
                           , binary
                           , case-insensitive
                           , containers
