--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -41,7 +41,6 @@ library
                           , base64 >= 0.3.0.0
                           , ngx-export
                           , ngx-export-tools >= 0.4.8.0
-                          , aeson >= 1.0.0.0 && < 2.0.0.0
                           , http-types >= 0.7.0
                           , http-client >= 0.5.3
                           , network >= 2.4.0.0
@@ -65,11 +64,15 @@ library
       build-depends:        ede >= 0.3.0.0
                           , prettyprinter
                           , trifecta >= 2.1
+                          , aeson >= 1.0.0.0
       cpp-options:         -DEDE_USE_PRETTYPRINTER
     else
       build-depends:        ede
                           , ansi-wl-pprint >= 0.6.3
                           , trifecta <= 2
+                          , aeson >= 1.0.0.0 && < 2.0.0.0
+  else
+      build-depends:        aeson >= 1.0.0.0
 
   if flag(PCRE)
     build-depends:          pcre-light >= 0.4
