--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,8 @@ jobs:
           else
               cabal v1-update
           fi
+          cabal v1-configure --constraint='aeson<2.0.0.0'
           cabal v1-install --only-dependencies
-          if echo "$GHCVER" | grep -q '^8\.[246]\.'
-          then
-              cabal v1-configure -f ede
-          else
-              cabal v1-configure -f ede -f edeuseprettyprinter
-          fi
           cabal v1-build
           cabal v2-sdist --builddir=dist
           SRC_TGZ=$(cabal info . | awk '{print $2; exit}').tar.gz &&
