freeze aeson version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
           else
               cabal v1-update
           fi
-          cabal v1-install --only-dependencies --constraint='aeson<2.0.0.0'
+          cabal v1-install --only-dependencies --constraint='aeson==1.5.6.0'
           cabal v1-install ede
           cabal v1-configure
           cabal v1-build
