--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
         cabal: [3.2]
         experimental: [false]
         include:
-          - ghc: 9.2.1
+          - ghc: 9.2.2
             cabal: 3.6.2.0
             experimental: true
-          - ghc: 9.0.1
+          - ghc: 9.0.2
             cabal: 3.4.0.0
             experimental: false
     steps:
@@ -42,7 +42,7 @@ jobs:
           else
               cabal v1-update
           fi
-          cabal v1-install --only-dependencies --constraint='aeson==1.5.6.0'
+          cabal v1-install --only-dependencies
           cabal v1-configure
           cabal v1-build
           cabal v2-sdist --builddir=dist
