--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    1.0
+version:                    1.1.0
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -43,6 +43,7 @@ library
                           , ngx-export-tools >= 0.4.8.0
                           , http-types >= 0.7.0
                           , http-client >= 0.5.3
+                          , http-client-brread-timeout
                           , network >= 2.4.0.0
                           , aeson >= 1.0.0.0
                           , time
