--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    1.1.0
+version:                    1.2.0
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -40,12 +40,14 @@ library
                           , bytestring >= 0.10.0.0
                           , base64 >= 0.3.0.0
                           , ngx-export
-                          , ngx-export-tools >= 0.4.8.0
+                          , ngx-export-tools >= 1.0
                           , http-types >= 0.7.0
                           , http-client >= 0.5.3
                           , http-client-brread-timeout
                           , network >= 2.4.0.0
+                          , async >= 2.0.1.0
                           , aeson >= 1.0.0.0
+                          , resolv
                           , time
                           , binary
                           , case-insensitive
@@ -77,10 +79,11 @@ library
     build-depends:          pcre-light >= 0.4
                           , pcre-heavy
 
-  exposed-modules:          NgxExport.Tools.Prometheus
-                          , NgxExport.Tools.Subrequest
+  exposed-modules:          NgxExport.Tools.Aggregate
+                          , NgxExport.Tools.Prometheus
+                          , NgxExport.Tools.Resolve
                           , NgxExport.Tools.ServiceHookAdaptor
-                          , NgxExport.Tools.Aggregate
+                          , NgxExport.Tools.Subrequest
 
   if flag(EDE)
     exposed-modules:        NgxExport.Tools.EDE
