import module NgxExport.Tools.SimpleService conditionally

--- a/test/Resolve/nginx.conf
+++ b/test/Resolve/nginx.conf
@@ -87,6 +87,7 @@ http {
         }
 
         location /upstreams {
+            default_type application/json;
             echo $hs_upstreams;
 
             allow 127.0.0.1;
