added docs for module NgxExport.Tools.Resolve

--- a/test/Resolve/nginx.conf
+++ b/test/Resolve/nginx.conf
@@ -22,15 +22,15 @@ http {
         server localhost:9000;
     }
 
-    upstream utest_hash {
-        zone utest_hash 64k;
-        upconf_hash $arg_a consistent;
-        server localhost:9000;
-    }
-
+#    upstream utest1 {
+#        zone utest1 64k;
+#        upconf_round_robin;
+#        server localhost:9000;
+#    }
+#
 #    upstrand utest {
 #        upstream utest;
-#        upstream utest_hash;
+#        upstream utest1;
 #        order per_request;
 #        next_upstream_statuses error timeout 5xx;
 #        next_upstream_timeout 60s;
@@ -40,11 +40,10 @@ http {
 
     haskell_run_service simpleService_collectUpstreams $hs_upstreams
         'Conf { upstreams =
-                    [UData { upstream =
+                    [UData { uQuery =
                                  QuerySRV
-                                     (SinglePriority "utest"
+                                     (SinglePriority "utest")
                                          (Name "_http._tcp.pkg.freebsd.org")
-                                     )
                            , uMaxFails = 0
                            , uFailTimeout = 10
                            }
@@ -55,11 +54,10 @@ http {
 
 #    haskell_run_service simpleService_collectUpstreams $hs_upstreams
 #        'Conf { upstreams =
-#                    [UData { upstream =
+#                    [UData { uQuery =
 #                                 QuerySRV
-#                                     (PriorityList ["utest", "utest_hash"]
+#                                     (PriorityList ["utest", "utest1"])
 #                                         (Name "_http._tcp.pkg.freebsd.org")
-#                                     )
 #                           , uMaxFails = 0
 #                           , uFailTimeout = 10
 #                           }
@@ -96,10 +94,6 @@ http {
 
         location / {
             proxy_pass http://utest;
-        }
-
-        location /hash {
-            proxy_pass http://utest_hash;
         }
 
 #        location /upstrand {
