--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: ${{ matrix.cabal }}
+      - name: Cleanup cabal.project setup
+        run: |
+          rm -rf dist-newstyle
       - name: Install
         env:
           GHCVER: ${{ matrix.ghc }}
