--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           cabal v1-install --only-dependencies
           cabal v1-configure
           cabal v1-build
-          cabal v2-sdist --builddir=dist
+          cabal v2-sdist --builddir=dist --ignore-project
           SRC_TGZ=$(cabal info . | awk '{print $2; exit}').tar.gz &&
               (cd dist/sdist && cabal v1-install --force-reinstalls "$SRC_TGZ")
           set +e
