added response timeout in Resolv module

--- a/test/Resolve/nginx.conf
+++ b/test/Resolve/nginx.conf
@@ -50,6 +50,7 @@ http {
                     ]
               , maxWait = Sec 300
               , waitOnException = Sec 2
+              , responseTimeout = Unset
               }';
 
 #    haskell_run_service simpleService_collectUpstreams $hs_upstreams
@@ -64,6 +65,7 @@ http {
 #                    ]
 #              , maxWait = Sec 300
 #              , waitOnException = Sec 2
+#              , responseTimeout = Unset
 #              }';
 
     haskell_service_var_ignore_empty $hs_upstreams;
