--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,19 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        ghc: [8.2.2, 8.4.4, 8.6.5, 8.8.4, 8.10.7, 9.0.2, 9.2.4]
+        ghc: [8.2.2, 8.4.4, 8.6.5, 8.8.4, 8.10.7, 9.0.2, 9.2.7]
         cabal: [3.6.2.0]
         experimental: [false]
         include:
-          - ghc: 9.4.1
+          - ghc: 9.6.1
+            cabal: 3.10.1.0
+            experimental: true
+          - ghc: 9.4.4
             cabal: 3.8.1.0
             experimental: false
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Hide cabal.project
-        run: |
-          mv cabal.project cabal.project.hide
       - name: Install GHC and Cabal
         uses: haskell/actions/setup@v2
         with:
@@ -49,7 +49,4 @@ jobs:
           SRC_TGZ=$(cabal info . | awk '{print $2; exit}').tar.gz &&
               (cd dist/sdist && cabal v1-install --force-reinstalls "$SRC_TGZ")
           set +e
-      - name: Unhide cabal.project
-        run: |
-          mv cabal.project.hide cabal.project
 
