--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    1.2.1
+version:                    1.2.2
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -10,7 +10,7 @@ extra-source-files:         Changelog.md
 author:                     Alexey Radkov <alexey.radkov@gmail.com>
 maintainer:                 Alexey Radkov <alexey.radkov@gmail.com>
 stability:                  stable
-copyright:                  2019-2022 Alexey Radkov
+copyright:                  2019-2023 Alexey Radkov
 category:                   Network
 build-type:                 Simple
 cabal-version:              1.20
@@ -48,7 +48,7 @@ library
                           , async >= 2.0.1.0
                           , aeson >= 1.0.0.0
                           , safe-exceptions
-                          , resolv
+                          , resolv >= 0.2.0.1
                           , time
                           , binary
                           , case-insensitive
