--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,17 +33,7 @@ jobs:
           cabal --version
           echo "$(ghc --version) "`
               `"[$(ghc --print-project-git-commit-id 2>/dev/null || echo '?')]"
-          if echo "$CABALVER" | grep -q '^3\.[0-5]\.'
-          then
-              cabal v1-update
-          else
-              cabal v2-update
-          fi
-          cabal v1-install --only-dependencies
-          cabal v1-configure
-          cabal v1-build
-          cabal v2-sdist --builddir=dist
-          SRC_TGZ=$(cabal info . | awk '{print $2; exit}').tar.gz &&
-              (cd dist/sdist && cabal v1-install --force-reinstalls "$SRC_TGZ")
+          cabal update
+          cabal build
           set +e
 
