dump splices when building the Aggregate test [ci skip]

--- a/test/Subrequest/cabal.project
+++ b/test/Subrequest/cabal.project
@@ -1,5 +1,5 @@
 -- note that ngx-export-tools-extra will be taken from Hackage;
--- to build ngx-export-healthcheck locally, add
+-- to build ngx-export-tools-extra locally, add
 -- ../../ngx-export-tools-extra.cabal to packages
 packages: test-tools-extra-subrequest.cabal
 
