--- a/test/Aggregate/Makefile
+++ b/test/Aggregate/Makefile
@@ -41,7 +41,7 @@ endif
 	. ../cabal-plan-direct-deps.sh | grep -v '.-e-ede-' >> $(GHCENV)
 	runhaskell --ghc-arg=-package=base \
 	  --ghc-arg=-package=$(PKGDISTR) Setup.hs build \
-	  --ghc-options="$(SRC) -o $(LIB) $(LINKRTS)"
+	  --ghc-options="$(SRC) -o $(LIB) -ddump-splices $(LINKRTS)"
 
 install: $(DISTR)
 	install -d $(PREFIX)
