added support for https connections in module NgxExport.Tools.Subrequest

--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -22,7 +22,7 @@ http {
     haskell load /var/lib/nginx/test_tools_extra_subrequest.so;
 
     haskell_run_service simpleService_makeRequest $hs_service_httpbin
-            '{"uri": "http://httpbin.org"}';
+            '{"uri": "https://httpbin.org"}';
 
     haskell_run_service simpleService_configureUDS $hs_service_uds
             'UDSConf {udsPath = "/tmp/backend.sock"}';
