--- a/ngx-export-tools-extra.cabal
+++ b/ngx-export-tools-extra.cabal
@@ -1,5 +1,5 @@
 name:                       ngx-export-tools-extra
-version:                    1.2.3
+version:                    1.2.4
 synopsis:                   More extra tools for Nginx haskell module
 description:                More extra tools for
         <https://github.com/lyokha/nginx-haskell-module Nginx haskell module>.
@@ -43,6 +43,7 @@ library
                           , ngx-export-tools >= 1.0
                           , http-types >= 0.7.0
                           , http-client >= 0.5.3
+                          , http-client-tls >= 0.3.4
                           , http-client-brread-timeout
                           , network >= 2.4.0.0
                           , async >= 2.0.1.0
