using voidHandler from ngx-export-tools 1.2.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,12 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        ghc: [8.2.2, 8.4.4, 8.6.5, 8.8.4, 8.10.7, 9.0.2, 9.2.8, 9.4.7]
-        cabal: [3.8.1.0]
+        ghc: ['8.2', '8.4', '8.6', '8.8', '8.10', '9.0', '9.2', '9.4']
+        cabal: ['3.8']
         experimental: [false]
         include:
-          - ghc: 9.6.3
-            cabal: 3.10.1.0
+          - ghc: '9.6'
+            cabal: '3.10'
             experimental: false
     steps:
       - name: Checkout
