minor docs update [ci skip]

--- a/test/ServiceHookAdaptor/nginx.conf
+++ b/test/ServiceHookAdaptor/nginx.conf
@@ -17,7 +17,7 @@ http {
 
     haskell load /var/lib/nginx/test_tools_extra_servicehookadaptor.so;
 
-    haskell_run_service simpleService_hookAdaptor $hs_hook_adaptor '';
+    haskell_run_service simpleService_hookAdaptor $hs_hook_adaptor noarg;
 
     haskell_service_hooks_zone hooks 32k;
 
