use -Wno-x-partial with ghc >= 9.8

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         include:
           - ghc: '9.8'
             cabal: '3.10'
-            experimental: true
+            experimental: false
           - ghc: '9.6'
             cabal: '3.10'
             experimental: false
