allow setting custom HTTP managers in subrequest configurations

--- a/test/Subrequest/test-tools-extra-subrequest.cabal
+++ b/test/Subrequest/test-tools-extra-subrequest.cabal
@@ -14,6 +14,8 @@ library
                           , ngx-export-tools
                           , ngx-export-tools-extra
                           , bytestring
+                          , http-client
+                          , network
 
   ghc-options:             -Wall -O2
 
