--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -27,6 +27,9 @@ http {
     haskell_run_service simpleService_configureUDS $hs_service_uds
             'UDSConf {udsPath = "/tmp/backend.sock"}';
 
+    haskell_run_service simpleService_configureUdsManager $hs_service_manager
+            '/tmp/myuds.sock';
+
     haskell_var_empty_on_error $hs_subrequest;
 
     server {
@@ -49,7 +52,7 @@ http {
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
 #                                          ResponseTimeout (Sec 30)
-#                                    , srUseUDS = False
+#                                    , srManager = Default
 #                                    }';
 
             if ($hs_subrequest = '') {
@@ -65,7 +68,7 @@ http {
             haskell_run_async makeSubrequest $hs_subrequest
                     '{"uri": "http://backend_proxy/"
                      ,"headers": [["Custom-Header", "$arg_a"]]
-                     ,"useUDS": true
+                     ,"manager": "uds"
                      }';
 
 # the same configuration for using with makeSubrequestWithRead
@@ -76,7 +79,34 @@ http {
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
 #                                          ResponseTimeout (Sec 30)
-#                                    , srUseUDS = True
+#                                    , srManager = UDS
+#                                    }';
+
+            if ($hs_subrequest = '') {
+                echo_status 404;
+                echo "Failed to perform subrequest";
+                break;
+            }
+
+            echo -n $hs_subrequest;
+        }
+
+        location /custom {
+            haskell_run_async makeSubrequest $hs_subrequest
+                    '{"uri": "http://backend_proxy_2"
+                     ,"headers": [["Custom-Header", "$arg_a"]]
+                     ,"manager": "myuds"
+                     }';
+
+# the same configuration for using with makeSubrequestWithRead
+#
+#                    'SubrequestConf { srMethod = ""
+#                                    , srUri = "http://127.0.0.1:8010/proxy"
+#                                    , srBody = ""
+#                                    , srHeaders = [("Custom-Header", "$arg_a")]
+#                                    , srResponseTimeout =
+#                                          ResponseTimeout (Sec 30)
+#                                    , srManager = Custom "myuds"
 #                                    }';
 
             if ($hs_subrequest = '') {
@@ -102,7 +132,7 @@ http {
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
 #                                          ResponseTimeout (Sec 30)
-#                                    , srUseUDS = False
+#                                    , srManager = Default
 #                                    }';
 
             set $proxy_with_exception $arg_proxy$arg_exc;
@@ -172,7 +202,7 @@ http {
                         }
                      ,"sink":
                         {"uri": "http://sink_proxy/echo"
-                        ,"useUDS": true
+                        ,"manager": "uds"
                         }
                      }';
 
@@ -186,7 +216,7 @@ http {
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
 #                                          ResponseTimeout (Sec 30)
-#                                    , srUseUDS = False
+#                                    , srManager = Default
 #                                    }
 #                                , bridgeSink = SubrequestConf
 #                                    { srMethod = ""
@@ -195,7 +225,7 @@ http {
 #                                    , srHeaders = []
 #                                    , srResponseTimeout =
 #                                          ResponseTimeout (Sec 30)
-#                                    , srUseUDS = True
+#                                    , srManager = UDS
 #                                    }
 #                                }';
 
@@ -221,6 +251,15 @@ http {
     server {
         listen       unix:/tmp/backend.sock;
         server_name  backend_proxy;
+
+        location / {
+            proxy_pass http://backend;
+        }
+    }
+
+    server {
+        listen       unix:/tmp/myuds.sock;
+        server_name  backend_proxy_2;
 
         location / {
             proxy_pass http://backend;
