--- a/test/Subrequest/nginx.conf
+++ b/test/Subrequest/nginx.conf
@@ -27,7 +27,7 @@ http {
     haskell_run_service simpleService_configureUDS $hs_service_uds
             'UDSConf {udsPath = "/tmp/backend.sock"}';
 
-    haskell_run_service simpleService_configureUdsManager $hs_service_manager
+    haskell_run_service simpleService_configureUdsManager $hs_service_myuds
             '/tmp/myuds.sock';
 
     haskell_var_empty_on_error $hs_subrequest;
@@ -91,9 +91,9 @@ http {
             echo -n $hs_subrequest;
         }
 
-        location /custom {
+        location /myuds {
             haskell_run_async makeSubrequest $hs_subrequest
-                    '{"uri": "http://backend_proxy_2"
+                    '{"uri": "http://backend_proxy_myuds/"
                      ,"headers": [["Custom-Header", "$arg_a"]]
                      ,"manager": "myuds"
                      }';
@@ -101,7 +101,7 @@ http {
 # the same configuration for using with makeSubrequestWithRead
 #
 #                    'SubrequestConf { srMethod = ""
-#                                    , srUri = "http://127.0.0.1:8010/proxy"
+#                                    , srUri = "http://backend_proxy_myuds/"
 #                                    , srBody = ""
 #                                    , srHeaders = [("Custom-Header", "$arg_a")]
 #                                    , srResponseTimeout =
@@ -259,7 +259,7 @@ http {
 
     server {
         listen       unix:/tmp/myuds.sock;
-        server_name  backend_proxy_2;
+        server_name  backend_proxy_myuds;
 
         location / {
             proxy_pass http://backend;
