test example in module PCRE was improved and extended

--- a/test/ServiceHookAdaptor/nginx.conf
+++ b/test/ServiceHookAdaptor/nginx.conf
@@ -28,13 +28,13 @@ http {
         location / {
             haskell_run testSecretWord $hs_secret_word $arg_s;
 
-            if ($hs_secret_word = null) {
+            if ($hs_secret_word = unset) {
                 echo_status 503;
                 echo "Try later! The service is not ready!";
                 break;
             }
 
-            if ($hs_secret_word = set) {
+            if ($hs_secret_word = success) {
                 echo_status 200;
                 echo "Congrats! You know the secret word!";
                 break;
@@ -55,7 +55,7 @@ http {
             allow 127.0.0.1;
             deny all;
 
-            haskell_service_hook resetSecretWord $hs_hook_adaptor;
+            rewrite ^ /change_sw last;
         }
     }
 }
