--- a/test/PCRE/hie.yaml
+++ b/test/PCRE/hie.yaml
@@ -1,4 +1,19 @@
 cradle:
-  direct:
-    arguments: ["-Wall", "-O2"]
-
+  bios:
+    shell: |
+      if [ -L .ghc.environment.lnk ]
+      then
+          printf "\055Wall\n\055O2\n" > "$HIE_BIOS_OUTPUT"
+          find . -name '[A-Z]*.hs' -exec sh -c '
+              file=$(echo "$1" | cut -c 3-)
+              if grep -q "^\s*module $(echo "$file" |
+                  sed '\''s/^\(.*\)\..*/\1/;s/\//./g'\'')" "$file"
+              then
+                  echo "$file" >> "$HIE_BIOS_OUTPUT"
+              fi
+          ' sh {} \;
+      else
+          echo "Ghc environment file wasn't found, "`
+              `"run \"make env\" and restart language server." >&2
+          exit 1
+      fi
